<resources>
    <string name="app_name">HomelessApp</string>
    <string name="enter_password">Enter password</string>
    <string name="google">google</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="facebook">facebook</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_key">AIzaSyDO1nJ5KsC6t1dHgAsws7TNJ3udled_WP0</string>
    <string name="title_activity_nearby_places">NearbyPlaces</string>
    <string name="google_maps_key">AIzaSyDO1nJ5KsC6t1dHgAsws7TNJ3udled_WP0</string>
    <string name="change_language">Change Language</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="general">General</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="homeless_pins">Homeless Pins</string>
    <string name="locate_homeless_people_around_your_area">Locate homeless people around your area</string>
    <string name="add_marker">Add Marker</string>
    <string name="add_marker_where_homeless_are_located">Add marker where homeless are located</string>
    <string name="search">Search</string>
    <string name="search_for_nearby_places_e_g_supermarket_hospitals_e_t_c_using_a_km_radius">Search for nearby places (e.g. supermarket,hospitals e.t.c) using a km radius</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="you_can_find_a_list_of_nessesary_phone_numbers">You can find a list of nessesary phone numbers</string>
    <string name="donate">Donate</string>
    <string name="make_donations_to_charitable_organizations">Make donations to charitable organizations</string>
    <string name="profile_settings_reset_password_e_t_c">Profile settings,reset password e.t.c</string>
</resources>