<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColorHint="#757575"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/registerFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/firstname"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColorHint="#757575"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/registerLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/lastname"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColorHint="#757575"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColorHint="#757575"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColorHint="#757575"
            android:textStyle="normal" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFC526"
            android:fontFamily="@font/roboto"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="#455A64"
            android:textSize="18sp"
            android:textStyle="normal"
            app:cornerRadius="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>