<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F6FF"
    tools:context=".MainMenu">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/homelessPinsButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/homelessPinText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/homeless_pins"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/locate_homeless_people_around_your_area"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/map" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/addMarkerButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/addMarkerText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/add_marker"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/add_marker_where_homeless_are_located"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/benchImage"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/homeless_bench" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/foodButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/search"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/search_for_nearby_places_e_g_supermarket_hospitals_e_t_c_using_a_km_radius"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/searchImage"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        app:srcCompat="@drawable/search" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/callButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/callText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/emergency_call"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/you_can_find_a_list_of_nessesary_phone_numbers"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/call" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/donateButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/donateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/donate"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/make_donations_to_charitable_organizations"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/donateImage"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/healthcare" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/SettingsText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/settings"
                            android:textAlignment="center"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:text="@string/profile_settings_reset_password_e_t_c"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/settingImage"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/appsettings" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



            </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/w3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>